<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2024 danielzhang130
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:dialogLayout="@layout/target_volume_layout"
        app:iconSpaceReserved="false"
        app:key="target_volume"
        app:title="@string/target_volume"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        app:dialogLayout="@layout/target_volume_layout"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="day_start"
        app:title="@string/day_start"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        app:dialogLayout="@layout/target_volume_layout"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="day_end"
        app:title="@string/day_end"
        app:useSimpleSummaryProvider="true" />
</androidx.preference.PreferenceScreen>