<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2024 danielzhang130
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="ca.sort_it.water.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />

        <action
            android:id="@+id/action_MainFragment_to_HistoryFragment"
            app:destination="@id/HistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="ca.sort_it.water.SettingsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_settings">
    </fragment>
    <fragment
        android:id="@+id/HistoryFragment"
        android:name="ca.sort_it.water.HistoryFragment"
        android:label="@string/history_fragment_label"
        tools:layout="@layout/fragment_history">
    </fragment>
</navigation>